--- a/projeto-site/public/login_cliente.html
+++ b/projeto-site/public/login_cliente.html
@@ -26,6 +26,7 @@
 				<li>Dashboard</li> 
 				<li>Suporte</li>
 				<li>Relatório</li>
+				<li><a href="index.html" onclick="logoff()">LOGOUT</a></li>
 			</ul>
 		</div>
 	</div>
