api suporte implementada

--- a/projeto-site/public/login_cliente.html
+++ b/projeto-site/public/login_cliente.html
@@ -8,6 +8,15 @@
 	<script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
 	<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
 	<link rel="stylesheet" href="CSS/styledash.css">
+	<style type="text/css">@import url('https://termolabs.helpspot.com/widgets/widgets.css');</style>
+	<script type="text/javascript" src="suporte.js"></script>
+	<script type="text/javascript">
+	HelpSpotWidget.Tab.show({ 
+		// Nearly every aspect of the widget is customizable, complete documentation here:
+		// http://www.helpspot.com/helpdesk/index.php?pg=kb.page&id=323
+		host: 'https://termolabs.helpspot.com'
+	});
+	</script>
 	<style>
 		canvas {
 			-moz-user-select: none;
@@ -15,13 +24,14 @@
 			-ms-user-select: none;
 		}
 	</style>
+	
 </head>
 
 <body>
 
 	<div class="navbar">
 		<div class="container_navbar">
-			<a href="../Prototipo Site/Index.html"><img src="../Prototipo Site/Imagens/LogoTerm.png" alt="Logo"></a>
+			<a href="Index.html"><img src="Imagens/LogoTerm.png" alt="Logo"></a>
 			<ul>
 				<li>Dashboard</li> 
 				<li>Suporte</li>
@@ -30,7 +40,6 @@
 			</ul>
 		</div>
 	</div>
-
 	<div class="navbar_empresa">
 		<div class="container_empresa">
 		<img src="../Prototipo Site/Imagens/Medley.png" alt="empresa">
