Ajustes em imagens

--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -64,13 +64,13 @@
     <div class="secao">
         <div class="container_secao">
             <div class="sec_sistema">
-                <img src="../Prototipo Site/Imagens/iconesis.png" alt="icon">
+                <img src="Imagens/iconesis.png" alt="icon">
                 <p>
                     O nosso sitema oferece monitoramento da temperatura nas <br> câmaras em tempo real, podendo
                     enviar alerta sobre <br> variações de temperatura e acesso remoto.
                 </p>
 
-                <img src="../Prototipo Site/Imagens/freezer.png" alt="iconF">
+                <img src="Imagens/freezer.png" alt="iconF">
 
                 <p>
                     Câmaras frias de acordo com a regulamentação <br> da ANVISA com controle de temperatura adequado
@@ -97,7 +97,7 @@
                 <h1 class="beneficios">Benefícios</h1>
                 <div class="monitor">
                     <div class="time">
-                        <img src="../Prototipo Site/Imagens/team.png" alt="team">
+                        <img src="Imagens/team.png" alt="team">
                         <p class="desc">
                             Equipe especializada na área dos Termolábeis.
                         </p>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="time">
-                        <img src="../Prototipo Site/Imagens/monitor.png" alt="team">
+                        <img src="Imagens/monitor.png" alt="team">
                         <p class="desc">
                             Sistema de monitoramento em tempo real.
                         </p>
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="time">
-                        <img src="../Prototipo Site/Imagens/moeda.png" alt="team">
+                        <img src="Imagens/moeda.png" alt="team">
                         <p class="desc">
                             Diminuímos suas perdas, aumentamos seu lucro.
                         </p>
@@ -128,7 +128,7 @@
     <div class="rodape">
 
         <div class="logo_rod">
-            <img src="../Prototipo Site/Imagens/LogoSemFundo.png" alt="logo">
+            <img src="Imagens/LogoSemFundo.png" alt="logo">
             <p>Soluções inteligentes em monitoramento de temperatura no armazenamento dos termolábeis
             </p>
         </div>
