--- a/projeto-site/public/trabalhe_conosco.html
+++ b/projeto-site/public/trabalhe_conosco.html
@@ -63,7 +63,7 @@
     <div class="rodape">
 
         <div class="logo_rod">
-            <img src="../Prototipo Site/Imagens/LogoSemFundo.png" alt="logo">
+            <img src="Imagens/LogoSemFundo.png" alt="logo">
             <p>Soluções inteligentes em monitoramento de temperatura no armazenamento dos termolábeis
             </p>
         </div>
@@ -77,11 +77,11 @@
         </div>
         <div class="icones">
             <h5>Siga-nos em nossas redes sociais</h5>
-            <img src="../Prototipo Site/Imagens/insta.jpg" alt="instagram">
-            <img src="../Prototipo Site/Imagens/face.png" alt="face">
-            <img src="../Prototipo Site/Imagens/twitter.jpg" alt="twitter">
+            <img src="Imagens/insta.jpg" alt="instagram">
+            <img src="Imagens/face.png" alt="face">
+            <img src="Imagens/twitter.jpg" alt="twitter">
             <a target="_blank" href="https://github.com/BandTec/TermoLabs"><img
-                src="../Prototipo Site/Imagens/git.jpg" alt="git"></a>
+                src="Imagens/git.jpg" alt="git"></a>
         </div>
 
     </div>
